DREM-5963 <AOS> エラー表示内容修正（DLNA（リモート接続））
Change-Id: I8b1250ae771d817a8354a5cafbe7e927f985d9a9

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -393,7 +393,6 @@
     <string name="contents_detail_external_display_dialog_msg">外部出力が検出されたので、再生を停止しました</string>
     <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません</string>
     <string name="contents_detail_response_ok">OK</string>
-    <string name="contents_player_bad_contents_info">再生できませんでした</string>
     <string name="contents_player_fail_msg">再生に失敗しました（MP-XXXX）</string>
     <string name="contents_player_fail_error_code_format">XXXX</string>
     <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
@@ -734,4 +733,16 @@
     <string name="remote_introduce_bt_txt">設定を行った</string>
     <string name="remote_introduce_bottom_txt">あとで設定する</string>
     <string name="remote_introduce_dialog_txt">あとで設定する場合は、「設定＞リモート視聴設定」より行ってください。</string>
+
+    <!-- リモート接続エラー -->
+    <string name="remote_connect_error_timeout">リモート接続がタイムアウトしました。\nしばらくしてからもう一度お試しください。(RM-9999)</string>
+    <string name="remote_connect_error_network_failed">リモート接続に失敗しました。\nネットワーク状態を確認してもう一度お試しください。(RM-%s)</string>
+    <string name="remote_connect_error_service_unavailable">リモート接続に失敗しました。\n現在、サービスを停止しているためリモート接続ができません。\nお知らせをご確認の上しばらくしてからもう一度お試しください。(RM-%s)</string>
+    <string name="remote_connect_error_connect_failed">リモート接続に失敗しました(RM-%s)</string>
+    <string name="remote_connect_error_connect_failed_ddtcp">リモート接続に失敗しました。\nしばらくしてからもう一度お試しください。(RM-D-%s)</string>
+    <string name="remote_connect_error_connect_failed_dirag">リモート接続に失敗しました。\nしばらくしてからもう一度お試しください。(RM-9997)</string>
+    <string name="remote_connect_error_already_connected">リモート接続に失敗しました。\nほかのユーザーが既にリモート接続をしているため、現在ご利用になれません。(RM-%s)</string>
+    <string name="remote_connect_error_local_registration_unset">視聴いただくには、「リモート視聴設定」が必要です。\n「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(RM-488)</string>
+    <string name="remote_connect_error_local_registration_expired">リモート視聴設定の期限が切れたため、現在ご利用になれません。\n再度、「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(RM-606)</string>
+    <string name="remote_connect_error_stb_power_off">リモート接続に失敗しました。\nドコモテレビターミナルの電源が入っていないため、現在ご利用になれません。\nドコモテレビターミナルの電源を入れ、しばらくしてからもう一度お試しください。(RM-%s)</string>
 </resources>
