DREM-5963 <AOS> エラー表示内容修正（DLNA（リモート接続）） 結合不具合対応
Change-Id: I659d648871afcf96a78b8790c721638d28ca3404

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -742,7 +742,7 @@
     <string name="remote_connect_error_connect_failed_ddtcp">リモート接続に失敗しました。\nしばらくしてからもう一度お試しください。(RM-D-%s)</string>
     <string name="remote_connect_error_connect_failed_dirag">リモート接続に失敗しました。\nしばらくしてからもう一度お試しください。(RM-9997)</string>
     <string name="remote_connect_error_already_connected">リモート接続に失敗しました。\nほかのユーザーが既にリモート接続をしているため、現在ご利用になれません。(RM-%s)</string>
-    <string name="remote_connect_error_local_registration_unset">視聴いただくには、「リモート視聴設定」が必要です。\n「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(RM-488)</string>
+    <string name="remote_connect_error_local_registration_unset">視聴いただくには、「リモート視聴設定」が必要です。\n「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(RM-%s)</string>
     <string name="remote_connect_error_local_registration_expired">リモート視聴設定の期限が切れたため、現在ご利用になれません。\n再度、「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(RM-606)</string>
     <string name="remote_connect_error_stb_power_off">リモート接続に失敗しました。\nドコモテレビターミナルの電源が入っていないため、現在ご利用になれません。\nドコモテレビターミナルの電源を入れ、しばらくしてからもう一度お試しください。(RM-%s)</string>
 </resources>
