DREM-4583 <AOS> エラー表示内容修正（DLNA（再生））
Change-Id: I77ca58892ed8447e5a5cd7081fac1960b3011fc1

--- a/dTVTerminalApp/app/src/main/res/values/strings.xml
+++ b/dTVTerminalApp/app/src/main/res/values/strings.xml
@@ -391,8 +391,8 @@
     <string name="contents_detail_contract_button_vod">ドコモテレビターミナルで購入する</string>
     <string name="contents_detail_contract_text_ch">このチャンネルをご覧になるには\nドコモテレビターミナルでの契約が必要です</string>
     <string name="contents_detail_contract_button_ch">ドコモテレビターミナルで契約する</string>
-    <string name="contents_detail_external_display_dialog_msg">外部出力が検出されたので、再生を停止しました</string>
-    <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません</string>
+    <string name="contents_detail_external_display_dialog_msg">外部出力が検出されたので、再生を停止しました(MP-%s)</string>
+    <string name="contents_detail_parental_check_fail">年齢制限のため視聴できません(MP-%s)</string>
     <string name="contents_detail_response_ok">OK</string>
     <string name="contents_detail_adinfo_array_pipe">"\\|"</string>
     <string name="contents_detail_pairing_request">ドコモテレビターミナルとのペアリングが必要です</string>
@@ -402,18 +402,17 @@
     <string name="contents_detail_player_no_channel">お使いの環境では、このコンテンツは視聴できません</string>
     <string name="contents_detail_pairing_button">ペアリングする</string>
     <string name="contents_detail_secure_player_fail_message">再生ができませんでした。\nしばらくしてからもう一度お試しください。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_network_disconnection">ネットワークから切断されました。\nWi-Fi設定を確認してもう一度お試しください。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_contents_not_find">ドコモテレビターミナルに指定されたコンテンツがありません。\nドコモテレビターミナルを再起動してもう一度お試しください。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_contents_could_not_read">ドコモテレビターミナルからコンテンツを読み込めませんでした。\nアプリを再起動してもう一度お試しください。(MP-%s)</string>
+    <string name="contents_detail_secure_player_setting_file_load_fail">再生ができませんでした。\nネットワークの状態を確認して再度お試しください。(P-%s)</string>
+    <string name="contents_detail_secure_player_fail_contents_not_find">再生ができませんでした。\nドコモテレビターミナルを「設定＞端末情報＞再起動」から再起動してもう一度お試しください。(MP-%s)</string>
+    <string name="contents_detail_secure_player_fail_contents_could_not_read">再生ができませんでした。\nアプリを再起動してもう一度お試しください。(MP-%s)</string>
     <string name="contents_detail_secure_player_fail_encrypted_communication_set">再生ができませんでした。\n指定されたコンテンツを再生するには、WEP, WPA, WPA2のいずれかの暗号化通信方式を使用するよう無線LANルーターの設定を変更してください。(MP-%s)</string>
     <string name="contents_detail_secure_player_fail_only_takeout_device">再生ができませんでした。\n持ち出しコンテンツは持ち出したデバイスでのみ再生できます。(MP-%s)</string>
     <string name="contents_detail_secure_player_fail_other_http_error">再生ができませんでした。\nネットワーク状態を確認してもう一度お試しください。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_specified_content_invalid">再生ができませんでした。\n指定されたコンテンツはデータが破損しているか不正なため再生できません。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_specified_content_format_not_support">再生ができませんでした。\nこのデバイスは指定されたコンテンツ形式の再生に対応していません。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_video_corresponding_content_error">再生ができませんでした。\n指定されたコンテンツのビデオデータが再生できませんでした。\n対応コンテンツについては、搭載機器一覧でご確認いただけます。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_audio_corresponding_content_error">再生ができませんでした。\n指定されたコンテンツのオーディオデータが再生できませんでした。\n対応コンテンツについては、搭載機器一覧でご確認いただけます。(MP-%s)</string>
-    <string name="contents_detail_secure_player_fail_remote_setting_one_more_time">再生ができませんでした。\n再度、「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(HC-%s)</string>
-    <string name="contents_detail_secure_player_fail_http_error">再生ができませんでした。\nネットワーク状態を確認してもう一度お試しください。(HC-%s)</string>
+    <string name="contents_detail_secure_player_fail_http_connection_error">再生ができませんでした。\nドコモテレビターミナルのネットワーク状態を確認してもう一度お試しください。(MP-%s)</string>
+    <string name="contents_detail_secure_player_fail_specified_content_invalid">再生ができませんでした。\n指定されたコンテンツはファイルが破損している可能性があります。(MP-%s)</string>
+    <string name="contents_detail_secure_player_fail_specified_content_format_not_support">再生ができませんでした。\n対応されていないコンテンツ形式のため再生できません。(MP-%s)</string>
+    <string name="contents_detail_secure_player_fail_remote_setting_one_more_time">再生ができませんでした。\n再度「リモート視聴設定」が必要です。\n「メニュー＞設定＞リモート視聴設定」からリモート視聴設定を行ってください。(MP-%s)</string>
+    <string name="contents_detail_secure_player_fail_http_error">再生ができませんでした。\nほかのユーザーが既に再生しているため、現在ご利用になれません。(MP-%s)</string>
 
     <!-- チャンネルリストタイトル -->
     <string name="channel_list_activity_title">チャンネルリスト</string>
