DREM-2788 <AOS> コンテンツ詳細画面(他サービス-エピソードタブ)
Change-Id: Ief99bbda9c86f890dd8bad814e0e037dd4213d3d

--- a/dTVTerminalApp/dasho/TVTerminal.dox
+++ b/dTVTerminalApp/dasho/TVTerminal.dox
@@ -37,6 +37,7 @@
         <android name="com.google.android.gms.common.api.GoogleApiActivity" rename-class="true"/>
         <android name="com.nttdocomo.android.tvterminalapp.activity.common.ChildContentListActivity" rename-class="true"/>
         <android name="com.nttdocomo.android.tvterminalapp.activity.detail.ContentDetailActivity" rename-class="true"/>
+        <android name="com.nttdocomo.android.tvterminalapp.activity.detail.EpisodeAllReadActivity" rename-class="true"/>
         <android name="com.nttdocomo.android.tvterminalapp.activity.home.ClipListActivity" rename-class="true"/>
         <android name="com.nttdocomo.android.tvterminalapp.activity.home.HomeActivity" rename-class="true"/>
         <android name="com.nttdocomo.android.tvterminalapp.activity.home.PremiumVideoActivity" rename-class="true"/>
